# Applied-GenAI_LLM-Apps_HR-Assistant-using-RAG

./: Project_LLMApps_HR-Assistant.ipynb  README.md  pyproject.toml
myChroma_DB/: chroma.sqlite3
