[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "arxiv>=4.0.0",
    "beautifulsoup4>=4.13.5",
    "bitsandbytes>=0.49.2",
    "bs4>=0.0.2",
    "chromadb>=1.1.1",
    "crewai-tools>=1.14.7",
    "crewai[tools]>=1.14.7",
    "datasets>=1.1.1",
    "ddgs>=9.14.4",
    "deepagents>=0.6.10",
    "deepeval>=2.5.5",
    "diffusers>=0.24.0",
    "evaluate>=0.2.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "gensim>=4.4.0",
    "gradio>=6.18.0",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jq>=1.11.0",
    "keras>=3.14.1",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-litellm>=0.5.1",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.8",
    "langserve>=0.3.3",
    "langsmith>=0.8.16",
    "lightgbm>=4.6.0",
    "litellm>=1.89.1",
    "llama-index>=0.14.22",
    "matplotlib>=3.11.0",
    "mcp>=1.26.0",
    "mysql-connector-python>=9.7.0",
    "nbconvert>=7.17.1",
    "newsapi-python>=0.2.7",
    "nltk>=3.9.4",
    "numexpr>=2.14.1",
    "numpy>=2.4.6",
    "openai>=2.42.0",
    "opencv-python>=4.13.0.92",
    "pageindex>=0.2.8",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "pinecone-client>=6.0.0",
    "protobuf>=5.29.6",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.22.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "ragas>=0.3.2",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
    "unstructured>=0.18.32",
    "uvicorn>=0.49.0",
    "validators==0.28.1",
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
    "xgboost>=3.2.0",
    "youtube-transcript-api>=1.2.4",
]
